I fixed the image size so that the first project images were not being cropped

--- a/style.css
+++ b/style.css
@@ -1149,7 +1149,7 @@ transition: transform 350ms ease-in-out;
 }
 
 /* We need to make room for the banner container */
-.extended__Description__text {
+#extended__Description__text2 {
 
     margin-top: 36ch;
 }
@@ -1225,13 +1225,19 @@ transition: transform 350ms ease-in-out;
 /* Lets make a rotating image banner that will show various pictures of the project 1*/
 /* The size of this banner will increase when the display size increases */
 .main-banner2 {
-    width: 420px;
-    height: 330px;
+    width: 600px;
+    height: 370px;
     margin-top: 100px;
     background-color: #fff;
     overflow: hidden;
     position: absolute;
 }
+
+    /* We need to make room for the banner container */
+    #extended__Description__text1 {
+
+        margin-top: 44ch;
+    }
 
 .main-banner2 .imgban2 {
     width: 100%;
@@ -1259,7 +1265,7 @@ transition: transform 350ms ease-in-out;
 
 /* This class and id contain our 1st image for project 2 */
 .main-banner2 #imgban4 {
-    background-image: url(images/AirTrafficimg1.png);
+    background-image: url(images/AirTrafficImg1.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -1270,7 +1276,7 @@ transition: transform 350ms ease-in-out;
     width: 30px;
     height: 40px;
     position: absolute;
-    top: 125px;
+    top: 145px;
     z-index: 2000;
     opacity: 0.2;
     cursor: pointer;
